--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "sequelize-query": "^1.0.3"
   },
   "engines": {
     "node": "14.x"
